--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -25,6 +25,12 @@
       text-align: left;
     }
   }
+
+  &-lg {
+    @include respond-to('large') {
+      text-align: left;
+    }
+  }
 }
 
 .is--intro-text {
