--- a/src/scss/components/_mobile-menu.scss
+++ b/src/scss/components/_mobile-menu.scss
@@ -21,7 +21,7 @@
     height: 100vh;
     visibility: visible;
     z-index: 500;
-    background-color: rgba($dark, .9);
+    background-color: rgba($dark, .98);
     width: 100%;
     transition: height .3s ease-in-out;
   }
